Refactor providers to be Describable (#51)